--- a/src/components/AccordionCard/AccordionCard.css
+++ b/src/components/AccordionCard/AccordionCard.css
@@ -4,10 +4,13 @@
 }
 
 .accordion-container {
-
     padding: 0.5rem;
 }
 
 .accordion-content {
     padding: 0.5rem;
+}
+
+.p-accordion .p-accordion-content {
+    padding: 0.25rem;
 }
